fix responsive on mobile

--- a/public/admin/css/styles.css
+++ b/public/admin/css/styles.css
@@ -13395,5 +13395,13 @@ input::-webkit-inner-spin-button {
 @media only screen and (max-width: 475px) {
   .empty-comment img {
     width: 300px;
+    height: 200px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .empty-comment img {
+    width: 250px;
+    height: 160px;
   }
 }
